# churn-web-service

./: .dockerignore  .gitignore  Dockerfile  predict.py  predict_test.py  predict_test_on_cloud.py  pyproject.toml  train.py
