[project]
name = "churn-web-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.2"
dependencies = [
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "requests>=2.32.3",
    "scikit-learn==1.6.0",
]

[dependency-groups]
dev = [
    "awsebcli>=3.21.0",
]
